objects/Performance_Metric__c.object
<CustomObject>
    <description>This Object will maintain group level data of a performance metric (Country, Channel , Performance Period).</description>
    <fields>
        <fullName>AccountList__c</fullName>
        <label>Account</label>
        <picklist>
            <picklistValues>
                <fullName>Accountx</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_End_Date__c</fullName>
        <label>Calculation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>picklist for different channels</description>
        <label>Channel</label>
        <picklist>
            <controllingField>Thea__c</controllingField>
            <picklistValues>
                <fullName>Residential</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Thea__c</controllingField>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Setup_Cut_off_Date__c</fullName>
        <description>Performance Metric Setup Cut Off date</description>
        <label>Metric Setup Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Edit_Date__c</fullName>
        <label>Open Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peformance_Metric_Name__c</fullName>
        <label>Peformance Metric Name</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Performance_Evaluation_Cut_off_Date__c</fullName>
        <description>Cut-Off date for providing the input for Performance Evaluation</description>
        <label>Performance Evaluation Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Period_Start_Date__c</fullName>
        <description>Use to define the start date of any performance cycle</description>
        <label>Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <formula>IF(
AND(
MONTH(Performance_Period_Start_Date__c ) &gt;=1 ,
MONTH(Performance_Period_Start_Date__c ) &lt; 7
),
&apos;P1&apos;,
&apos;P2&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Year__c</fullName>
        <formula>YEAR( Performance_Period_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_period_End_date__c</fullName>
        <description>Performance Cycle End date</description>
        <label>Performance period End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Racking_Price__c</fullName>
        <description>this field is used to store Racking Price for Germany</description>
        <label>Racking Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_Approval_for_Overriding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Approval for Overriding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thea__c</fullName>
        <label>Theater</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_To_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User To Override</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Metrics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Performance Metric</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Performance Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PerPer_Start_GreaThan_Metric_Cutoff_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Performance_Period_Start_Date__c &lt; Metric_Setup_Cut_off_Date__c</errorConditionFormula>
        <errorMessage>Please select Metric Setup Cutoff Date prior to Performance Period Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PerfEvalCutDate_GreatThan_PerfPerEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>Performance_Evaluation_Cut_off_Date__c &lt;  Performance_period_End_date__c</errorConditionFormula>
        <errorMessage>Please select Performance Evaluation Cut-off Date greater than Performance Period End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Perf_Enddate_Should_GreatThan_StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>(Performance_period_End_date__c &lt; Performance_Period_Start_Date__c)</errorConditionFormula>
        <errorMessage>Please select  greater Performance Period End Date than Performance Period Start Date.</errorMessage>
    </validationRules>
</CustomObject>